Fix weird spacing around bold text in the menu

--- a/game/src/menu/menu.scss
+++ b/game/src/menu/menu.scss
@@ -101,7 +101,8 @@
         cursor: pointer;
 
         b {
-            margin-left: 5px;
+            margin-left: 2px;
+            margin-right: 2px;
         }
     }
 
